include/gpac/filters.h


typedef struct __gf_filter_session GF_FilterSession;
typedef struct __gf_filter GF_Filter;
typedef struct __gf_filter_pid GF_FilterPid;
typedef struct __gf_filter_pck GF_FilterPacket;
typedef union __gf_filter_event GF_FilterEvent;
typedef struct __gf_prop_val GF_PropertyValue;
typedef enum
{
	GF_PROP_FORBIDEN=0,
	GF_PROP_SINT,
	GF_PROP_UINT,
	GF_PROP_LSINT,
	GF_PROP_LUINT,
	GF_PROP_BOOL,
	GF_PROP_FRACTION,
	GF_PROP_FRACTION64,
	GF_PROP_FLOAT,
	GF_PROP_DOUBLE,
	GF_PROP_VEC2I,
	GF_PROP_VEC2,
	GF_PROP_VEC3I,
	GF_PROP_VEC3,
	GF_PROP_VEC4I,
	GF_PROP_VEC4,
	GF_PROP_PIXFMT,
	GF_PROP_PCMFMT,
	GF_PROP_STRING,
	GF_PROP_STRING_NO_COPY,
	GF_PROP_DATA,
	GF_PROP_NAME,
	GF_PROP_DATA_NO_COPY,
	GF_PROP_CONST_DATA,
	GF_PROP_POINTER,
	GF_PROP_STRING_LIST,
	GF_PROP_UINT_LIST,
	GF_PROP_SINT_LIST,
	GF_PROP_VEC2I_LIST,
	GF_PROP_LAST_DEFINED,
} GF_PropType;
typedef struct
{
	s32 x;
	s32 y;
} GF_PropVec2i;
u32 gf_props_4cc_get_type(u32 prop_4cc);
u32 gf_props_get_id(const char *name);
union __gf_filter_event
{
	GF_FEVT_Base base;
	GF_FEVT_Play play;
	GF_FEVT_SourceSeek seek;
	GF_FEVT_AttachScene attach_scene;
	GF_FEVT_Event user_event;
	GF_FEVT_QualitySwitch quality_switch;
	GF_FEVT_VisibililityHint visibility_hint;
	GF_FEVT_BufferRequirement buffer_req;
	GF_FEVT_SegmentSize seg_size;
	GF_FEVT_FileDelete file_del;
};
typedef enum
{
	GF_FPROBE_NOT_SUPPORTED = 0,
	GF_FPROBE_MAYBE_SUPPORTED,
	GF_FPROBE_SUPPORTED,
	GF_FPROBE_FORCE,
	GF_FPROBE_EXT_MATCH,
} GF_FilterProbeScore;
void gf_filter_make_sticky(GF_Filter *filter);
u32 gf_filter_get_num_events_queued(GF_Filter *filter);
void gf_filter_ask_rt_reschedule(GF_Filter *filter, u32 us_until_next);
void gf_filter_post_process_task(GF_Filter *filter);
void gf_filter_setup_failure(GF_Filter *filter, GF_Err reason);
void gf_filter_set_max_extra_input_pids(GF_Filter *filter, u32 max_extra_pids);
Bool gf_filter_block_enabled(GF_Filter *filter);
void gf_filter_block_eos(GF_Filter *filter, Bool do_block);
void gf_filter_get_output_buffer_max(GF_Filter *filter, u32 *max_buf, u32 *max_playout_buf);
void gf_filter_hint_single_clock(GF_Filter *filter, u64 time_in_us, GF_Fraction64 media_timestamp);
void gf_filter_get_clock_hint(GF_Filter *filter, u64 *time_in_us, GF_Fraction64 *media_timestamp);
Bool gf_filter_all_sinks_done(GF_Filter *filter);
Bool gf_filter_connections_pending(GF_Filter *filter);
GF_Err gf_filter_prevent_blocking(GF_Filter *filter, Bool prevent_blocking_enabled);
GF_Err gf_filter_update_status(GF_Filter *filter, u32 percent, char *szStatus);
GF_FilterPid *gf_filter_pid_new(GF_Filter *filter);
void gf_filter_pid_set_udta(GF_FilterPid *PID, void *udta);
void *gf_filter_pid_get_udta(GF_FilterPid *PID);
GF_FilterPacket * gf_filter_pid_get_packet(GF_FilterPid *PID);
void gf_filter_pid_drop_packet(GF_FilterPid *PID);
void gf_filter_pid_send_event(GF_FilterPid *PID, GF_FilterEvent *evt);
GF_Filter *gf_fs_new_filter(GF_FilterSession *session, const char *name, GF_Err *e);
GF_Err gf_filter_push_caps(GF_Filter *filter, u32 code, GF_PropertyValue *value, const char *name, u32 flags, u8 priority);
GF_Err gf_filter_set_process_ckb(GF_Filter *filter, GF_Err (*process_cbk)(GF_Filter *filter) );
GF_Err gf_filter_set_configure_ckb(GF_Filter *filter, GF_Err (*configure_cbk)(GF_Filter *filter, GF_FilterPid *PID, Bool is_remove) );
GF_Err gf_filter_set_process_event_ckb(GF_Filter *filter, Bool (*process_event_cbk)(GF_Filter *filter, const GF_FilterEvent *evt) );
GF_Err gf_filter_set_reconfigure_output_ckb(GF_Filter *filter, GF_Err (*reconfigure_output_cbk)(GF_Filter *filter, GF_FilterPid *PID) );
GF_Err gf_filter_set_probe_data_cbk(GF_Filter *filter, const char * (*probe_data_cbk)(const u8 *data, u32 size, GF_FilterProbeScore *score) );