gpac/include/gpac/constants.h


u32 gf_stream_type_by_name(const char *name);
typedef enum
{
	GF_PIXEL_GREYSCALE	=	GF_4CC('G','R','E','Y'),
	GF_PIXEL_ALPHAGREY	=	GF_4CC('G','R','A','L'),
	GF_PIXEL_GREYALPHA	=	GF_4CC('A','L','G','R'),
	GF_PIXEL_RGB_444	=	GF_4CC('R','4','4','4'),
	GF_PIXEL_RGB_555	=	GF_4CC('R','5','5','5'),
	GF_PIXEL_RGB_565	=	GF_4CC('R','5','6','5'),
	GF_PIXEL_RGB		=	GF_4CC('R','G','B','3'),
	GF_PIXEL_BGR		=	GF_4CC('B','G','R','3'),
	GF_PIXEL_RGBX		=	GF_4CC('R','G','B','4'),
	GF_PIXEL_BGRX		=	GF_4CC('B','G','R','4'),
	GF_PIXEL_XRGB		=	GF_4CC('R','G','B','X'),
	GF_PIXEL_XBGR		=	GF_4CC('B','G','R','X'),
	GF_PIXEL_ARGB		=	GF_4CC('A','R','G','B'),
	GF_PIXEL_RGBA		=	GF_4CC('R','G','B', 'A'),
	GF_PIXEL_BGRA		=	GF_4CC('B','G','R','A'),
	GF_PIXEL_ABGR		=	GF_4CC('A','B','G','R'),
	GF_PIXEL_RGBD		=	GF_4CC('R', 'G', 'B', 'D'),
	GF_PIXEL_RGBDS		=	GF_4CC('3', 'C', 'D', 'S'),
	GF_PIXEL_RGB_DEPTH = GF_4CC('R', 'G', 'B', 'd'),
	GF_PIXEL_UNCV = GF_4CC('u', 'n', 'c', 'v'),
	GF_PIXEL_YUYV		=	GF_4CC('Y','U','Y','V'),
	GF_PIXEL_YVYU		=	GF_4CC('Y','V','Y','U'),
	GF_PIXEL_UYVY		=	GF_4CC('U','Y','V','Y'),
	GF_PIXEL_VYUY		=	GF_4CC('V','Y','U','Y'),
	GF_PIXEL_YUYV_10		=	GF_4CC('Y','U','Y','L'),
	GF_PIXEL_YVYU_10		=	GF_4CC('Y','V','Y','L'),
	GF_PIXEL_UYVY_10		=	GF_4CC('U','Y','V','L'),
	GF_PIXEL_VYUY_10		=	GF_4CC('V','Y','U','L'),
	GF_PIXEL_YUV		=	GF_4CC('Y','U','1','2'),
	GF_PIXEL_YVU		=	GF_4CC('Y','V','1','2'),
	GF_PIXEL_YUV_10	=	GF_4CC('Y','0','1','0'),
	GF_PIXEL_YUVA		=	GF_4CC('Y', 'U', 'V', 'A'),
	GF_PIXEL_YUVD		=	GF_4CC('Y', 'U', 'V', 'D'),
	GF_PIXEL_NV21		=	GF_4CC('N','V','2','1'),
	GF_PIXEL_NV21_10	=	GF_4CC('N','2','1','0'),
	GF_PIXEL_NV12		=	GF_4CC('N','V','1','2'),
	GF_PIXEL_NV12_10	=	GF_4CC('N','1','2','0'),
	GF_PIXEL_YUV422		=	GF_4CC('Y','4','4','2'),
	GF_PIXEL_YUV422_10	=	GF_4CC('Y','2','1','0'),
	GF_PIXEL_YUVA444	=	GF_4CC('Y','A','4','4'),
	GF_PIXEL_YUV444		=	GF_4CC('Y','4','4','4'),
	GF_PIXEL_YUV444_10	=	GF_4CC('Y','4','1','0'),
	GF_PIXEL_YUV444_PACK	=	GF_4CC('Y','U','V','4'),
	GF_PIXEL_VYU444_PACK	=	GF_4CC('V','Y','U','4'),
	GF_PIXEL_YUVA444_PACK	=	GF_4CC('Y','A','4','p'),
	GF_PIXEL_UYVA444_PACK	=	GF_4CC('U','Y','V','A'),
	GF_PIXEL_YUV444_10_PACK	=	GF_4CC('Y','4','1','p'),
	GF_PIXEL_V210			= GF_4CC('v','2','1','0'),
	GF_PIXEL_GL_EXTERNAL	=	GF_4CC('E','X','G','L')
} GF_PixelFormat;
GF_PixelFormat gf_pixel_fmt_parse(const char *pf_name);
typedef enum
{
	GF_AUDIO_FMT_U8 = 1,
	GF_AUDIO_FMT_S16,
	GF_AUDIO_FMT_S16_BE,
	GF_AUDIO_FMT_S32,
	GF_AUDIO_FMT_S32_BE,
	GF_AUDIO_FMT_FLT,
	GF_AUDIO_FMT_FLT_BE,
	GF_AUDIO_FMT_DBL,
	GF_AUDIO_FMT_DBL_BE,
	GF_AUDIO_FMT_S24,
	GF_AUDIO_FMT_S24_BE,
	GF_AUDIO_FMT_LAST_PACKED,
	GF_AUDIO_FMT_U8P,
	GF_AUDIO_FMT_S16P,
	GF_AUDIO_FMT_S32P,
	GF_AUDIO_FMT_FLTP,
	GF_AUDIO_FMT_DBLP,
	GF_AUDIO_FMT_S24P,
} GF_AudioFormat;
GF_AudioFormat gf_audio_fmt_parse(const char *af_name);