share/python/libgpac.py


    type = _libgpac.gf_props_4cc_get_type(prop4cc)
    prop_val.type = type
    if propname=="StreamType":
        prop_val.value.uint = _libgpac.gf_stream_type_by_name(prop.encode('utf-8'))
        return prop_val
    elif propname=="CodecID":
        prop_val.value.uint = _libgpac.gf_codec_parse(prop.encode('utf-8'))
        return prop_val
    elif propname=="PixelFormat":
        prop_val.value.uint = _libgpac.gf_pixel_fmt_parse(prop.encode('utf-8'))
        return prop_val
    elif propname=="AudioFormat":
        prop_val.value.uint = _libgpac.gf_audio_fmt_parse(prop.encode('utf-8'))
        return prop_val


    if (type==GF_PROP_SINT):
        prop_val.value.sint = prop
    elif (type==GF_PROP_UINT):
        prop_val.value.uint = prop
    elif (type==GF_PROP_LSINT):
        prop_val.value.longsint = prop
    elif (type==GF_PROP_LUINT):
        prop_val.value.longuint = prop
    elif (type==GF_PROP_BOOL):
        prop_val.value.boolean = prop
    elif (type==GF_PROP_FRACTION):
        if hasattr(prop, 'den') and hasattr(prop, 'num'):
            prop_val.value.frac.num = prop.num
            prop_val.value.frac.den = prop.den
        elif is_integer(prop):
            prop_val.value.frac.num = prop
            prop_val.value.frac.den = 1
        else:
            prop_val.value.frac.num = 1000*prop
            prop_val.value.frac.den = 1000
    elif (type==GF_PROP_FRACTION64):
        if hasattr(prop, 'den') and hasattr(prop, 'num'):
            prop_val.value.lfrac.num = prop.num
            prop_val.value.lfrac.den = prop.den
        elif is_integer(prop):
            prop_val.value.lfrac.num = prop
            prop_val.value.lfrac.den = 1
        else:
            prop_val.value.lfrac.num = 1000000*prop
            prop_val.value.lfrac.den = 1000000
    elif (type==GF_PROP_FLOAT):
        prop_val.value.fnumber = prop
    elif (type==GF_PROP_DOUBLE):
        prop_val.value.number = prop
    elif (type==GF_PROP_VEC2I):
        if hasattr(prop, 'x') and hasattr(prop, 'y'):
            prop_val.value.vec2i.x = prop.x
            prop_val.value.vec2i.y = prop.y
        else:
            raise Exception('Invalid property value for vec2i: ' + str(prop))
    elif (type==GF_PROP_VEC2):
        if hasattr(prop, 'x') and hasattr(prop, 'y'):
            prop_val.value.vec2.x = prop.x
            prop_val.value.vec2.y = prop.y
        else:
            raise Exception('Invalid property value for vec2: ' + str(prop))
    elif (type==GF_PROP_VEC3I):
        if hasattr(prop, 'x') and hasattr(prop, 'y') and hasattr(prop, 'z'):
            prop_val.value.vec3i.x = prop.x
            prop_val.value.vec3i.y = prop.y
            prop_val.value.vec3i.z = prop.z
        else:
            raise Exception('Invalid property value for vec3i: ' + str(prop))
    elif (type==GF_PROP_VEC3):
        if hasattr(prop, 'x') and hasattr(prop, 'y') and hasattr(prop, 'z'):
            prop_val.value.vec3i.x = prop.x
            prop_val.value.vec3i.y = prop.y
            prop_val.value.vec3i.z = prop.z
        else:
            raise Exception('Invalid property value for vec3: ' + str(prop))
    elif (type==GF_PROP_VEC4I):
        if hasattr(prop, 'x') and hasattr(prop, 'y') and hasattr(prop, 'z') and hasattr(prop, 'w'):
            prop_val.value.vec4i.x = prop.x
            prop_val.value.vec4i.y = prop.y
            prop_val.value.vec4i.z = prop.z
            prop_val.value.vec4i.w = prop.w
        else:
            raise Exception('Invalid property value for vec4i: ' + str(prop))
    elif (type==GF_PROP_VEC4):
        if hasattr(prop, 'x') and hasattr(prop, 'y') and hasattr(prop, 'z') and hasattr(prop, 'w'):
            prop_val.value.vec4.x = prop.x
            prop_val.value.vec4.y = prop.y
            prop_val.value.vec4.z = prop.z
            prop_val.value.vec4.w = prop.w
        else:
            raise Exception('Invalid property value for vec4: ' + str(prop))
    elif (type==GF_PROP_STRING) or (type==GF_PROP_STRING_NO_COPY) or (type==GF_PROP_NAME):
        prop_val.value.string = str(prop).encode('utf-8')
    elif (type==GF_PROP_DATA) or (type==GF_PROP_DATA_NO_COPY) or (type==GF_PROP_CONST_DATA):
        raise Exception('Setting data property from pythin not yet implemented !')
    elif (type==GF_PROP_POINTER):
        raise Exception('Setting pointer property from python not yet implemented !')
    elif (type==GF_PROP_STRING_LIST):
        raise Exception('Mapping from stringlist to python not implemented ')
    elif (type==GF_PROP_UINT_LIST):
        if isinstance(prop, list)==False:
            raise Exception('Property is not a list')
        prop_val.value.uint_list.nb_items = len(prop)
        prop_val.value.uint_list.vals = (ctypes.c_uint * len(prop))(*prop)
    elif (type==GF_PROP_SINT_LIST):
        if isinstance(prop, list)==False:
            raise Exception('Property is not a list')
        prop_val.value.sint_list.nb_items = len(prop)
        prop_val.value.sint_list.vals = (ctypes.c_int * len(prop))(*prop)
    elif (type==GF_PROP_VEC2I_LIST):
        if isinstance(prop, list)==False:
            raise Exception('Property is not a list')
        prop_val.value.sint_list.nb_items = len(prop)
        prop_val.value.v2i_list.vals = (GF_PropVec2i * len(prop))
        for i in range (len(prop)):
            prop_val.value.v2i_list.vals[i].x = prop[i].x
            prop_val.value.v2i_list.vals[i].y = prop[i].y
    else:
        raise Exception('Unsupported property type ' + str(type) )

    return prop_val


_libgpac.gf_filter_set_rt_udta.argtypes = [GF_Filter, py_object]
_libgpac.gf_filter_get_rt_udta.argtypes = [GF_Filter]
_libgpac.gf_filter_get_rt_udta.restype = c_void_p

_libgpac.gf_filter_pid_set_udta.argtypes = [GF_Filter, py_object]
_libgpac.gf_filter_pid_get_udta.argtypes = [GF_Filter]
_libgpac.gf_filter_pid_get_udta.restype = c_void_p

_libgpac.gf_filter_pid_send_event.argtypes = [GF_FilterPid, POINTER(GF_FilterEvent)]


_libgpac.gf_filter_set_configure_ckb.argtypes = [GF_Filter, c_void_p]
@CFUNCTYPE(c_int, GF_Filter, GF_FilterPid, c_bool)
def filter_cbk_configure(_f, _pid, is_remove):
    obj = _libgpac.gf_filter_get_rt_udta(_f)
    filter = cast(obj, py_object).value
    obj = _libgpac.gf_filter_pid_get_udta(_pid)
    if obj:
        pid_obj = cast(obj, py_object).value
    else:
        pid_obj=None

    first=True
    if pid_obj:
        first=False
    else:
        pid_obj = FilterPid(filter, _pid, True)
        _libgpac.gf_filter_pid_set_udta(_pid, py_object(pid_obj))
    res = filter.configure_pid(pid_obj, is_remove);

    if is_remove:
        _libgpac.gf_filter_pid_set_udta(_pid, None)
        filter.ipids.remove(pid_obj)
        return

    if first:
        filter.ipids.append(pid_obj)

    return res


_libgpac.gf_filter_set_process_ckb.argtypes = [GF_Filter, c_void_p]
@CFUNCTYPE(c_int, GF_Filter)
def filter_cbk_process(_f):
    obj = _libgpac.gf_filter_get_rt_udta(_f)
    filter = cast(obj, py_object).value
    return filter.process();

_libgpac.gf_filter_set_process_event_ckb.argtypes = [GF_Filter, c_void_p]
@CFUNCTYPE(c_bool, GF_Filter, POINTER(GF_FilterEvent) )
def filter_cbk_process_event(_f, _evt):
    obj = _libgpac.gf_filter_get_rt_udta(_f)
    filter = cast(obj, py_object).value
    return filter.process_event(_evt.contents);

_libgpac.gf_filter_set_probe_data_cbk.argtypes = [GF_Filter, c_void_p]
@CFUNCTYPE(c_int, c_char_p, c_uint )
def filter_cbk_probe_data(_data, _size):
    obj = _libgpac.gf_filter_get_rt_udta(_f)
    filter = cast(obj, py_object).value
    return filter.probe_data(_data, _size);

_libgpac.gf_filter_set_reconfigure_output_ckb.argtypes = [GF_Filter, c_void_p]
@CFUNCTYPE(c_int, GF_Filter, GF_FilterPid )
def filter_cbk_reconfigure_output(_f, _pid):
    obj = _libgpac.gf_filter_get_rt_udta(_f)
    filter = cast(obj, py_object).value
    obj = _libgpac.gf_filter_pid_get_udta(_pid)
    if obj:
        pid_obj = cast(obj, py_object).value
    else:
        pid_obj=None
    if pid_obj:
        return filter.reconfigure_output(_f);
    raise Exception('Reconfigure on unknown output pid !')


_libgpac.gf_filter_pid_get_packet.argtypes = [GF_FilterPid]
_libgpac.gf_filter_pid_get_packet.restype = GF_FilterPacket

_libgpac.gf_filter_pid_drop_packet.argtypes = [GF_FilterPid]

_libgpac.gf_filter_pid_new.argtypes = [GF_Filter]
_libgpac.gf_filter_pid_new.restype = GF_FilterPid

_libgpac.gf_filter_update_status.argtypes = [GF_Filter, c_uint, c_char_p]

_libgpac.gf_filter_ask_rt_reschedule.argtypes = [GF_Filter]
_libgpac.gf_filter_post_process_task.argtypes = [GF_Filter]


GF_SETUP_ERROR=0
GF_NOTIF_ERROR=1
GF_NOTIF_ERROR_AND_DISCONNECT=2

_libgpac.gf_filter_ask_rt_reschedule.argtypes = [GF_Filter, c_int, c_bool]
_libgpac.gf_filter_setup_failure.argtypes = [GF_Filter, c_int]
_libgpac.gf_filter_make_sticky.argtypes = [GF_Filter]
_libgpac.gf_filter_prevent_blocking.argtypes = [GF_Filter, c_bool]
_libgpac.gf_filter_block_eos.argtypes = [GF_Filter, c_bool]
_libgpac.gf_filter_set_max_extra_input_pids.argtypes = [GF_Filter, c_uint]
_libgpac.gf_filter_block_enabled.argtypes = [GF_Filter]
_libgpac.gf_filter_block_enabled.restype = c_bool
_libgpac.gf_filter_get_output_buffer_max.argtypes = [GF_Filter, POINTER(c_uint), POINTER(c_uint)]
_libgpac.gf_filter_all_sinks_done.argtypes = [GF_Filter]
_libgpac.gf_filter_all_sinks_done.restype = c_bool
_libgpac.gf_filter_get_num_events_queued.argtypes = [GF_Filter]

_libgpac.gf_filter_get_clock_hint.argtypes = [GF_Filter, POINTER(c_ulonglong), POINTER(GF_Fraction64)]
_libgpac.gf_filter_connections_pending.argtypes = [GF_Filter]
_libgpac.gf_filter_connections_pending.restype = c_bool
_libgpac.gf_filter_hint_single_clock.argtypes = [GF_Filter, c_ulonglong, GF_Fraction64]


class FilterCustom(Filter):

    def __init__(self, session, fname="Custom"):
        _filter = _libgpac.gf_fs_new_filter(session._sess, fname.encode('utf-8'), byref(last_errp))
        last_err = last_errp.value
        if (last_err<0): 
            raise Exception('Failed to create filter ' + URL + ': ' + e2s(last_err))
        #create base class
        Filter.__init__(self, session, _filter)
        #register with our filter bank
        session._filters.append(self)

        #setup callback udta and callback functions
        _libgpac.gf_filter_set_rt_udta(_filter, py_object(self) )
        if (hasattr(self, 'configure_pid')):
            _libgpac.gf_filter_set_configure_ckb(self._filter, filter_cbk_configure)

        if (hasattr(self, 'process')):
            _libgpac.gf_filter_set_process_ckb(self._filter, filter_cbk_process)

        if (hasattr(self, 'process_event')):
            _libgpac.gf_filter_set_process_event_ckb(self._filter, filter_cbk_process_event)

        if (hasattr(self, 'probe_data')):
            _libgpac.gf_filter_set_probe_data_ckb(self._filter, filter_cbk_probe_data)

        if (hasattr(self, 'reconfigure_output')):
            _libgpac.gf_filter_set_reconfigure_output_ckb(self._filter, filter_cbk_reconfigure_output)

        self.ipids=[]
        self.opids=[]


    def push_cap(self, pcode, prop, flag, priority=0):
        prop_4cc = pcode;
        prop_name = None;
        if isinstance(pcode, str):
            _pname = pcode.encode('utf-8')
            prop_4cc = _libgpac.gf_props_get_id(_pname)
            if prop_4cc==0:
                prop_name = _pname

        prop_val = _make_prop(prop_4cc, pcode, prop)
        err = _libgpac.gf_filter_push_caps(self._filter, prop_4cc, byref(prop_val), prop_name, flag, priority)
        if (err<0): 
            raise Exception('Failed to push cap: ' + e2s(err))

    def new_pid(self):
        _pid = _libgpac.gf_filter_pid_new(self._filter)
        if _pid:
            pid_obj = FilterPid(self, _pid, False)
            _libgpac.gf_filter_pid_set_udta(_pid, py_object(pid_obj))
            self.opids.append(pid_obj)
            return pid_obj
        raise Exception('Failed to create output pid')
